--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Прием граждан", "Index", "Home", null, new { @class = "navbar-brand" })  
+                @Html.ActionLink("Identity", "Index", "Home", null, new { @class = "navbar-brand" })  
                 <a class="navbar-brand" id ="TimerPanel"></a>  
             </div>
             <div class="navbar-collapse collapse">
@@ -28,7 +28,6 @@
                     <li>@Html.ActionLink("Обращение", "Index", "Allocution")</li>
                     <li>@Html.ActionLink("Реестр", "Index", "Reestr")</li>
                         
-                    @*<li>@Html.ActionLink("Расписание", "Index", "Schedule")</li>*@
                     }
                     @if (Request.IsAuthenticated && User.IsInRole("Admin"))
                     {
@@ -46,7 +45,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - МКУ "УИТС г. Сургута"</p>
+            <p>&copy; @DateTime.Now.Year"</p>
         </footer>
     </div>
 </body>
