--- a/WebApp/Views/Manage/Index.cshtml
+++ b/WebApp/Views/Manage/Index.cshtml
@@ -24,9 +24,9 @@
             ]
         </dd>
         <dt>Внешние имена входа:</dt>
-        <dd>
-           @*// @Model.Logins.Count [
-            //@Html.ActionLink("Управление", "ManageLogins") ]*@
+        <dd>Не реализованно
+           @* @Model.Logins.Count [
+    @Html.ActionLink("Управление", "ManageLogins") ] *@
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
@@ -36,13 +36,13 @@
              
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
+         
             <dt>Номер телефона:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None")
                 @if (Model.PhoneNumber != null)
                 {
-                    <br />
+                   
                     <text>[&nbsp;&nbsp;@Html.ActionLink("Change", "AddPhoneNumber")&nbsp;&nbsp;]</text>
                     using (Html.BeginForm("RemovePhoneNumber", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
@@ -52,17 +52,13 @@
                 }
                 else
                 {
-                    <text>[&nbsp;&nbsp;@Html.ActionLink("Add", "AddPhoneNumber")
+                    <text>@Html.ActionLink("Add", "AddPhoneNumber")</text>
                 }
             </dd>
-        *@
+        
         <dt>Двухфакторная проверка подлинности:</dt>
         <dd>
-            <p>
-                There are no two-factor authentication providers configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
-                for details on setting up this ASP.NET application to support two-factor authentication.
-            </p>
-            @*@if (Model.TwoFactor)
+            @if (Model.TwoFactor)
                 {
                     using (Html.BeginForm("DisableTwoFactorAuthentication", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                     {
@@ -81,7 +77,7 @@
                         <input type="submit" value="Включить" class="btn btn-link" />
                         </text>
                     }
-                }*@
+                }
         </dd>
     </dl>
 </div>
