--- a/WebApp/Views/Main/Index.cshtml
+++ b/WebApp/Views/Main/Index.cshtml
@@ -22,6 +22,15 @@
         -moz-box-shadow: -3px 0px 10px 0px rgba(0,0,0,0.34);
     }
 
+    #staticpanel {
+    background:#F8F8F8 none repeat scroll 0 0;
+    border-top:1px solid #ccc;
+    bottom:0;
+    padding:0px 0;
+    position:fixed;
+    width:100%;
+    z-index:100;
+}
     /*div {
         position: absolute;
         right: 0px;
@@ -37,6 +46,8 @@
         border: 3px solid #73AD21;
         padding: 10px;
     }*/
+
+
 </style>
 </head>
     <body>
@@ -56,11 +67,44 @@
             <li>Root node 2</li>
         </ul>
         </div>
-        <div id="Content"></div>
+        <div id="Content" stylr="overflow: scroll"></div>
 
         
 
             @*@Html.Raw("<div> тест</div> <input type='text'>");*@
+<div id="staticpanel">
+<table style="width: 100%">
+    <tr><td style="width: 30%"></td>
+    <td style="width: 40%"><input type="text" td style="width: 100%"></td>
+    <td style="width: 30%"></td></tr>
+    </table>
+</div>
+
+//
+        <!-- Trigger the modal with a button -->
+        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+
+        <!-- Modal -->
+        <div id="myModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Modal Header</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>Some text in the modal.</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+//
 <script>
    
     $('#jstree').jstree({
